[workspace.package]
authors = ["RedstoneWizard08"]
version = "0.2.0-beta.1"
edition = "2021"
readme = "./README.md"
license = "MIT"
homepage = "https://github.com/RedstoneWizard08/mayhem"
repository = "https://github.com/RedstoneWizard08/mayhem"

description = """
A Discord-like chat application optimized for security, stability, speed, and ultimate customization.
"""

[workspace.dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros", "ws", "multipart", "http2", "json"] }
axum-core = "0.4.3"
base64 = "0.22.1"
bytes = "1.6.0"
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["debug", "env", "derive", "cargo", "string"] }
colored = "2.1.0"
ctrlc = "3.4.4"
deadpool = "0.12.1"
derive_builder = "0.20.0"
derive_more = "0.99.17"
diesel = { version = "2.2.3", features = ["postgres"] }
diesel-async = { version = "0.4.1", git = "https://github.com/weiznich/diesel_async", rev = "86cf7cd", features = ["postgres", "deadpool"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.6"
either = { version = "1.12.0", features = ["serde"] }
flate2 = { version = "1.0.30", features = ["zlib"] }
futures = "0.3.30"
futures-util = "0.3.30"
git2 = "0.18.3"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = "0.1.5"
include_dir = "0.7.3"
indicatif = "0.17.8"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
once_cell = "1.19.0"
path-absolutize = "3.1.1"
pbkdf2 = "0.12.2"
proc-macro2 = "1.0.85"
question = "0.2.2"
quote = "1.0.36"
rand = "0.8.5"
random-string = "1.1.0"
redis = { version = "0.25.4", features = ["tokio", "serde", "serde_json", "tokio-comp", "connection-manager"] }
regex = "1.10.5"
reqwest = { version = "0.12.4", default-features = false, features = ["stream", "json", "gzip", "rustls-tls"] }
ring = "0.17.8"
scoped-futures = "0.1.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_urlencoded = "0.7.1"
sha-1 = "0.10.1"
structopt = "0.3.26"
stun = "0.6.0"
stun_codec = "0.3.5"
tar = "0.4.41"
tempdir = "0.3.7"
thiserror = "1.0.61"
tungstenite = "0.23.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-pg-mapper = "0.2.0"
tokio-postgres = "0.7.10"
tokio-stream = "0.1.15"
tokio-tungstenite = "0.23.0"
toml = "0.8.14"
tower = { version = "0.4.13", features = ["full"] }
tracing = { version = "0.1.40", features = ["log", "log-always", "async-await"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json", "serde", "regex", "time", "tracing"] }
url = "2.5.1"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
webrtc = "0.11.0"
zip-extract = "0.1.3"

# My Packages
axumite = "0.1.2"
jsglue = "0.1.0"

# Internal packages
mayhem-db = { path = "crates/db" }
midlog = { path = "crates/midlog" }
migrations = { path = "crates/migrations" }
migrations-macros = { path = "crates/migrations-macros" }

[workspace]
resolver = "2"
members = [
	"apps/server",
	"apps/cli",
    "apps/stun-server",
	"crates/db",
    "crates/midlog",
    "crates/migrations",
    "crates/migrations-macros",
]

[profile.release]
lto = true
