[package]
name = "mayhemctl"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.22", features = ["debug", "env", "derive", "cargo", "string"] }
clap-verbosity-flag = "2.0.0"
futures = "0.3.25"
git2 = "0.15.0"
lazy_static = "1.4.0"
path-absolutize = "3.0.14"
question = "0.2.2"
reqwest = { version = "0.11.12", features = ["serde_json", "stream", "tokio-util", "cookies", "deflate", "json", "gzip", "mime_guess"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
structopt = "0.3.26"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
