[package]
name = "mayhem-db"
authors = ["RedstoneWizard08"]
version = "0.1.0-beta.2"
edition = "2021"
readme = "../README.md"

description = """
A Discord-like chat application for security, stability, speed, and ultimate customization.

=> Database Module
"""

license = "MIT"
homepage = "https://github.com/RedstoneWizard08/mayhem"
repository = "https://github.com/RedstoneWizard08/mayhem"

[dependencies]
async-trait = "0.1.58"
dotenvy = "0.15.6"
log = "0.4.17"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
sea-orm = { version = "0.10.3", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio", "runtime-tokio-rustls", "postgres-array", "macros", "mock"] }
tokio = { version = "1.21.2", features = ["test-util", "full"] }
mayhem-migrations = { version = "0.1.0-beta.2", path = "../migrations" }
futures = "0.3.25"
serde = { version = "1.0.153", features = ["derive", "serde_derive"] }
