[package]
name = "mayhem-migrations"
authors = ["RedstoneWizard08"]
version = "0.2.0-beta.1"
edition = "2021"

description = """
A Discord-like chat application optimized for security, stability, speed, and ultimate customization.

=> Database Migrations Module
"""

license = "MIT"
homepage = "https://github.com/RedstoneWizard08/mayhem"
repository = "https://github.com/RedstoneWizard08/mayhem"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.21.2", features = ["test-util", "full"] }
futures = "0.3.25"
sea-orm-migration = { version = "^0.10.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
