[package]
name = "mayhem"
version = "0.0.0"
edition = "2021"

[dependencies]
config = "0.13.2"
deadpool-postgres = { version = "0.10.3", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
futures = "0.3.25"
pbkdf2 = "0.11.0"
postgres = "0.19.4"
rand = "0.8.5"
reqwest = "0.11.12"
rocket = { version = "0.5.0-rc.2", features = ["json", "msgpack", "serde_json", "secrets", "uuid"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["deadpool-postgres", "deadpool_postgres"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_urlencoded = "0.7.1"
tokio = { version = "1.21.2", features = ["full"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.7"
url = "2.3.1"
