[package]
name = "mayhem"
authors = ["RedstoneWizard08"]
version = "0.1.0-beta.2"
edition = "2021"
readme = "../README.md"

description = """
A Discord-like chat application for security, stability, speed, and ultimate customization.
"""

license = "MIT"
homepage = "https://github.com/RedstoneWizard08/mayhem"
repository = "https://github.com/RedstoneWizard08/mayhem"

[dependencies]
axum = { version = "0.6.10", features = ["headers", "macros", "ws", "multipart", "http2", "json"] }
chrono = "0.4.23"
config = "0.13.2"
derive_more = "0.99.17"
dotenv = "0.15.0"
either = { version = "1.8.0", features = ["serde"] }
futures = "0.3.25"
http = "0.2.9"
lazy_static = "1.4.0"
mayhem-db = { version = "0.1.0-beta.2", path = "../database" }
pbkdf2 = "0.11.0"
rand = "0.8.5"
reqwest = "0.11.12"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_urlencoded = "0.7.1"
tokio = { version = "1.21.2", features = ["full"] }
tokio-codec = "0.1.2"
tokio-io = "0.1.13"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.7"
tokio-reactor = "0.1.12"
tokio-stream = "0.1.11"
tokio-tcp = "0.1.4"
tokio-tls = "0.3.1"
tower = { version = "0.4.13", features = ["full"] }
tracing = { version = "0.1.37", features = ["log", "log-always", "async-await"] }
tracing-subscriber = { version = "0.3.16", features = ["json", "serde", "regex", "time", "tracing"] }
url = "2.3.1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
