[package]
name = "mayhem-websocket-server"
authors = ["RedstoneWizard08"]
version = "0.1.0-beta.2"
edition = "2021"
readme = "../README.md"

description = """
A Discord-like chat application for security, stability, speed, and ultimate customization.
"""

license = "MIT"
homepage = "https://github.com/RedstoneWizard08/mayhem"
repository = "https://github.com/RedstoneWizard08/mayhem"

[dependencies]
futures = "0.3.25"
futures-util = "0.3.25"
reqwest = { version = "0.11.13", features = ["serde_json", "json", "cookies"] }
serde = { version = "1.0.152", features = ["derive", "serde_derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
tokio-stream = "0.1.11"
uuid = { version = "1.2.2", features = ["v1", "v3", "v4", "fast-rng"] }
warp = { version = "0.3.3", features = ["compression"] }
mayhem-db = { version = "0.1.0-beta.2", path = "../database" }
sqlx = { version = "0.6.2", features = ["postgres", "uuid", "tls", "time", "json", "chrono", "runtime-tokio-rustls"] }
