[package]
name = "mayhemctl"
authors.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
git2.workspace = true
lazy_static.workspace = true
path-absolutize.workspace = true
question.workspace = true
structopt.workspace = true
