[package]
name = "mayhem-server"
authors.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
derive_more.workspace = true
either.workspace = true
flate2.workspace = true
futures.workspace = true
http.workspace = true
hyper.workspace = true
include_dir.workspace = true
indicatif.workspace = true
lazy_static.workspace = true
mayhem-db.workspace = true
pbkdf2.workspace = true
rand.workspace = true
redis.workspace = true
reqwest.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
tar.workspace = true
tempdir.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-pg-mapper.workspace = true
tokio-postgres.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
zip-extract.workspace = true
