[package]
name = "stun-server"
authors.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
hyper.workspace = true
lazy_static.workspace = true
mayhem-db.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
stun.workspace = true
stun_codec.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
webrtc.workspace = true
