[package]
name = "mayhem-db"
authors = ["RedstoneWizard08"]
version = "0.2.0-beta.1"
edition = "2021"
readme = "../README.md"

description = """
A Discord-like chat application optimized for security, stability, speed, and ultimate customization.

=> Database Module
"""

license = "MIT"
homepage = "https://github.com/RedstoneWizard08/mayhem"
repository = "https://github.com/RedstoneWizard08/mayhem"

[dependencies]
async-trait.workspace = true
dotenvy.workspace = true
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio", "runtime-tokio-rustls", "postgres-array", "macros", "mock"] }
tokio.workspace = true
tracing.workspace = true
migrations.workspace = true
futures.workspace = true
serde.workspace = true
