[package]
name = "mayhem-db"
authors.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
deadpool.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel-derive-enum.workspace = true
dotenvy.workspace = true
futures.workspace = true
migrations.workspace = true
num.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rand.workspace = true
random-string.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
