[package]
name = "midlog"
authors.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
colored.workspace = true
lazy_static.workspace = true
tracing.workspace = true
