[package]
name = "migrations-macros"
authors.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
proc-macro2.workspace = true
