[package]
name = "migrations"
authors = ["RedstoneWizard08"]
version = "0.2.0-beta.1"
edition = "2021"

description = """
A Discord-like chat application optimized for security, stability, speed, and ultimate customization.

=> Database Migrations Module
"""

license = "MIT"
homepage = "https://github.com/RedstoneWizard08/mayhem"
repository = "https://github.com/RedstoneWizard08/mayhem"

[dependencies]
tokio.workspace = true
futures.workspace = true
sea-orm-migration = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
