[package]
name = "migrations"
authors.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
diesel.workspace = true
diesel-async.workspace = true
migrations-macros.workspace = true
scoped-futures.workspace = true
tracing.workspace = true

[dev-dependencies]
lazy_static.workspace = true
